# FastAPI-telegram-service

./: .env.example  .gitignore  .hadolint.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/application/handlers/: arts.py  flowers.py  keyboard.py  poems.py  start.py  utils.py
app/domain/arts/: dto.py
app/domain/flowers/: dto.py
app/domain/poems/: dto.py
app/infrastructure/containers/: factories.py  providers.py
app/infrastructure/exceptions/: arts.py  base.py  flowers.py  poems.py
app/infrastructure/services/: base.py  config.py  convertors.py  services.py  web.py
app/presentation/api_bot/: main.py
app/settings/: __init__.py  config.py
docker_compose/: bot.yaml
